tests/fixtures/invalid/none_le_int.py
# Cannot compare with <= None and Int
x: bool = None <= 1
